--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "homepage": "https://rebecalasconi.github.io/SlimMom/",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "loader": "^2.1.1",
     "mongoose": "^8.11.0",
     "nodemon": "^3.1.9"
   }
