--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "homepage": ".",
   "main": "index.js",
+  "homepage": "https://rebecalasconi.github.io/SlimMom",
   "scripts": {
     "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
