--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slimmom",
   "version": "1.0.0",
   "main": "index.js",
-  "homepage": "https://rebecalasconi.github.io/SlimMom/",
+  "homepage": "https://rebecalasconi.github.io/SlimMom",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
